// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deepMap should handle string roots and transform them 1`] = `
<div>
  <span>
    foo
  </span>
  <span>
    foo
  </span>
  <span>
    foo
  </span>
</div>
`;

exports[`deepMap should visit every element 1`] = `
<div>
  <div
    class="root-visited"
  >
    <span
      class="firstLevel-visited"
    >
      <span
        class="secondLevel-visited"
      >
        array of simple nodes visited 1 visited null visited null visited null visited 
      </span>
    </span>
  </div>
</div>
`;
